Add displayProjects and dom module, add skeleton to index.html, displayProjects on opening page, update planning document.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
-  <h1>todo list</h1>
+  <div class="content">
+    <h2 class="projects__heading">Projects</h2>
+    <button class="projects__button"">+</button>
+    <div class=" projects__list">
+
+  </div>
+
+  </div>
+  <div class="tasks">
+
+  </div>
+  </div>
+
   <script type="module" src="main.js"></script>
 </body>
 
