Refactor initializeOpenClose into two functions. Add functionality to edit tasks, mark them complete, delete them. Add 'completed' styling in style.css.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
       </form>
     </dialog>
 
+    <dialog class="edit-task-dialog">
+      <form action="#" class="edit-task-dialog__form" method="get">
+        <fieldset>
+          <div class="edit-task-dialog__item">
+            <label for="editTaskTitle">Task Title:</label>
+            <input type="text" id="editTaskTitle" name="title">
+          </div>
+        </fieldset>
+        <div class="edit-task-dialog__buttons">
+          <button class="btn edit-task-dialog__submit" type="submit">Edit</button>
+          <button class="btn edit-task-dialog__close">Cancel</button>
+        </div>
+      </form>
+    </dialog>
+
   </div>
 
   <script type="module" src="main.js"></script>
