Add Edit Project dialog and link to adjusted project title button. Add ability to toggle a task and a project complete, which shows text as line-through using css selector.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
       </form>
     </dialog>
 
+    <dialog class="edit-project-dialog">
+      <form action="#" class="edit-project-dialog__form" method="get">
+        <fieldset>
+          <div class="edit-project-dialog__item">
+            <label for="editProjectTitle">Task Title:</label>
+            <input type="text" id="editProjectTitle" name="title">
+          </div>
+        </fieldset>
+        <div class="edit-project-dialog__buttons">
+          <button class="btn edit-project-dialog__submit" type="submit">Edit</button>
+          <button class="btn edit-project-dialog__close">Cancel</button>
+        </div>
+      </form>
+    </dialog>
+
     <dialog class="edit-task-dialog">
       <form action="#" class="edit-task-dialog__form" method="get">
         <fieldset>
