Changing 'priority' property to 'tags', and moving into Tasks object.

--- a/src/template.html
+++ b/src/template.html
@@ -104,6 +104,9 @@
               <!-- Populated by displayTasks -->
             </select>
           </div>
+          <div class="edit-task-dialog__tags">
+            <!-- Populated by displayTasks -->
+          </div>
           <div class="edit-task-dialog__subtasks">
             <!-- Populated by displayTasks -->
           </div>
