--- a/src/template.html
+++ b/src/template.html
@@ -28,12 +28,12 @@
         <fieldset>
           <div class="project-dialog__item">
             <label for="newProjectTitle">Project Title:</label>
-            <input type="text" id="newProjectTitle" name="title">
+            <input autofocus type="text" id="newProjectTitle" name="title">
           </div>
         </fieldset>
         <div class="project-dialog__buttons">
           <button type="submit" class="btn project-dialog__submit">Add</button>
-          <button class="btn project-dialog__close">Cancel</button>
+          <button class="btn project-dialog__close">Close</button>
         </div>
       </form>
     </dialog>
@@ -43,7 +43,7 @@
         <fieldset>
           <div class="task-dialog__item">
             <label for="newTaskTitle">Task Title:</label>
-            <input type="text" id="newTaskTitle" name="title">
+            <input autofocus type="text" id="newTaskTitle" name="title">
           </div>
           <div class="task-dialog__item">
             <label for="newTaskDueDate">Due Date:</label>
@@ -52,7 +52,7 @@
         </fieldset>
         <div class="task-dialog__buttons">
           <button class="btn task-dialog__submit" type="submit">Add</button>
-          <button class="btn task-dialog__close">Cancel</button>
+          <button class="btn task-dialog__close">close</button>
         </div>
       </form>
     </dialog>
@@ -62,12 +62,12 @@
         <fieldset>
           <div class="subtask-dialog__item">
             <label for="newSubTaskTitle">Subtask Title:</label>
-            <input type="text" id="newSubTaskTitle" name="title">
+            <input autofocus type="text" id="newSubTaskTitle" name="title">
           </div>
         </fieldset>
         <div class="subtask-dialog__buttons">
           <button class="btn subtask-dialog__submit" type="submit">Add</button>
-          <button class="btn subtask-dialog__close">Cancel</button>
+          <button class="btn subtask-dialog__close">Close</button>
         </div>
       </form>
     </dialog>
@@ -77,12 +77,12 @@
         <fieldset>
           <div class="edit-project-dialog__item">
             <label for="editProjectTitle">Project Title:</label>
-            <input type="text" id="editProjectTitle" name="title">
+            <input autofocus type="text" id="editProjectTitle" name="title">
           </div>
         </fieldset>
         <div class="edit-project-dialog__buttons">
           <button class="btn edit-project-dialog__submit" type="submit">Edit</button>
-          <button class="btn edit-project-dialog__close">Cancel</button>
+          <button class="btn edit-project-dialog__close">Close</button>
         </div>
       </form>
     </dialog>
@@ -92,7 +92,11 @@
         <fieldset>
           <div class="edit-task-dialog__item">
             <label for="editTaskTitle">Task Title:</label>
-            <input type="text" id="editTaskTitle" name="title">
+            <input autofocus type="text" id="editTaskTitle" name="title">
+          </div>
+          <div class="edit-task-dialog__item">
+            <label for="editTaskDescription">Description:</label>
+            <input type="text" id="editTaskDescription" name="description">
           </div>
           <div class="edit-task-dialog__item">
             <label for="editTaskDueDate">Due Date:</label>
@@ -104,6 +108,10 @@
               <!-- Populated by displayTasks -->
             </select>
           </div>
+
+          <!-- Keep this hidden button prior to any focusable buttons created by displayTasks -->
+          <button type="submit" style="display: none;"></button>
+
           <div class="edit-task-dialog__tags">
             <!-- Populated by displayTasks -->
           </div>
@@ -114,7 +122,7 @@
         </fieldset>
         <div class="edit-task-dialog__buttons">
           <button class="btn edit-task-dialog__submit" type="submit">Edit</button>
-          <button class="btn edit-task-dialog__close">Cancel</button>
+          <button class="btn edit-task-dialog__close">Close</button>
         </div>
       </form>
     </dialog>
@@ -124,7 +132,7 @@
         <fieldset>
           <div class="edit-subtask-dialog__item">
             <label for="editSubTaskTitle">Subtask Title:</label>
-            <input type="text" id="editSubTaskTitle" name="title">
+            <input autofocus type="text" id="editSubTaskTitle" name="title">
           </div>
           <div class="edit-subtask-dialog__subtasks">
             <!-- Populated by displayTasks -->
@@ -132,7 +140,7 @@
         </fieldset>
         <div class="edit-subtask-dialog__buttons">
           <button class="btn edit-subtask-dialog__submit" type="submit">Edit</button>
-          <button class="btn edit-subtask-dialog__close">Cancel</button>
+          <button class="btn edit-subtask-dialog__close">Close</button>
         </div>
       </form>
     </dialog>
