Add Reset button. Adjust getMyApp to handle empty app data.

--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,7 @@
 
 <body>
   <div class="content">
+    <button class="btn reset">Reset</button>
 
     <h2 class="projects__heading">Projects</h2>
     <button class="btn projects__new-project-button">+</button>
@@ -23,6 +24,7 @@
     </div>
     <button class="btn tasks__new-task-button">+</button>
 
+    <!-- Dialogs from here to end of template -->
     <dialog class="project-dialog">
       <form action="#" method="get" class="project-dialog__form">
         <fieldset>
