Initial styling, styling of main dialogs, styling of buttons and tasks.

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="content">
+  <div class="content container">
     <button class="btn reset">Reset</button>
 
     <h2 class="projects__heading">Projects</h2>
