Move display.js helper methods to dialoghelper module, adjust complete project button to not display text or hover if project complete, delete unused files, adjust css to use pixel-convertable em units (rem for font size), add media query for css to flow projects and tasks side by side with larger screen size, adjust backdrop color and opacity for dialogs, remove "Projects" and "Tasks" headings, write README.md, tidy up planning.md.

--- a/src/template.html
+++ b/src/template.html
@@ -14,19 +14,21 @@
       <p>todo-list</p>
       <button type="button" class="nav__reset">reset</button>
     </nav>
-    <div class="content">
+    <div class="content row">
 
-      <!-- <h2 class="projects__heading">Projects</h2> -->
-      <div class="projects__list">
-        <!-- Populated by displayProjects -->
+      <div class="col col--narrow">
+        <div class="projects__list">
+          <!-- Populated by displayProjects -->
+        </div>
+        <button type="button" class="btn projects__new-project-button">+</button>
       </div>
-      <button type="button" class="btn projects__new-project-button">+</button>
 
-      <!-- <h2 class="tasks__heading">Tasks</h2> -->
-      <div class="tasks__list">
-        <!-- Populated by displayTasks -->
+      <div class="col col--wide">
+        <div class="tasks__list">
+          <!-- Populated by displayTasks -->
+        </div>
+        <button class="btn tasks__new-task-button">+</button>
       </div>
-      <button class="btn tasks__new-task-button">+</button>
 
       <!-- Dialogs from here to end of template -->
       <dialog class="project-dialog">
